--- a/browser_app/index.html
+++ b/browser_app/index.html
@@ -26,6 +26,7 @@
       <div class="plot" data-index="5"></div>
     </div>
   </div>
+  <button id="reset-button">Reset Trees</button>
   <div id="blink-stats">
     Today: <span id="blink-count">0</span> | High Score: <span id="high-score">0</span>
     <br>
