--- a/popup.html
+++ b/popup.html
@@ -25,7 +25,7 @@
   <div id="blink-stats">
     Today: <span id="blink-count">0</span> | High Score: <span id="high-score">0</span>
     <br>
-    <span>Name:</span><span id="username-display"></span>
+    <span>user:</span><span id="username-display"></span>
   </div>
   <div id="countdown-overlay">
     <div class="countdown-text" id="countdown-text"></div>
