--- a/popup.html
+++ b/popup.html
@@ -21,12 +21,12 @@
       <div class="plot" data-index="5"></div>
     </div>
   </div>
-  <button id="reset-button">Reset Trees</button>
   <div id="blink-stats">
     Today: <span id="blink-count">0</span> | High Score: <span id="high-score">0</span>
     <br>
-    <span>user:</span><span id="username-display"></span>
+    <span id="username-display"></span>
   </div>
+  <button id="reset-button">Reset Trees</button>
   <div id="countdown-overlay">
     <div class="countdown-text" id="countdown-text"></div>
   </div>
