--- a/browser_app/index.html
+++ b/browser_app/index.html
@@ -31,7 +31,7 @@
     <br>
   </div>
   <button id="reset-button">Reset Trees</button>
-  <span id="username-display"></span>
+  <span>User:</span><span id="username-display"></span>
   <div id="countdown-overlay">
     <div class="countdown-text" id="countdown-text"></div>
   </div>
