--- a/popup.html
+++ b/popup.html
@@ -24,9 +24,11 @@
   <div id="blink-stats">
     Today: <span id="blink-count">0</span> | High Score: <span id="high-score">0</span>
     <br>
-    <span id="username-display"></span>
   </div>
   <button id="reset-button">Reset Trees</button>
+  <br>
+  <span>User:</span><span id="username-display"></span>
+
   <div id="countdown-overlay">
     <div class="countdown-text" id="countdown-text"></div>
   </div>
