--- a/popup.html
+++ b/popup.html
@@ -27,7 +27,7 @@
   </div>
   <button id="reset-button">Reset Trees</button>
   <br>
-  <span>User:</span><span id="username-display"></span>
+  <span style="text-align: center;">User:</span><span id="username-display"></span>
 
   <div id="countdown-overlay">
     <div class="countdown-text" id="countdown-text"></div>
