--- a/popup.html
+++ b/popup.html
@@ -24,7 +24,8 @@
   <div id="blink-stats">
     Today: <span id="blink-count">0</span> | High Score: <span id="high-score">0</span>
     <br>
-    <
+    <br>
+    <span style="text-align: center; font-weight: bold;">User:</span><span id="username-display"></span>
   </div>
   <button id="reset-button">Reset Trees</button>
   <br>
