--- a/browser_app/index.html
+++ b/browser_app/index.html
@@ -8,7 +8,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="apple-touch-icon" href="images/gnome.jpg">
 </head>
-<body>
+<body style="text-align: center;">
   <div id="username-modal" style="display: none;">
     <div id="username-modal-content">
       <p>Enter a username:</p>
