--- a/browser_app/index.html
+++ b/browser_app/index.html
@@ -31,6 +31,7 @@
     <span id="username-tooltip" class="tooltiptext"></span>
   </div>
   <button id="reset-button">Reset Trees</button>
+  <button >Start Game</button>
   <div id="countdown-overlay">
     <div class="countdown-text" id="countdown-text"></div>
   </div>
