--- a/browser_app/index.html
+++ b/browser_app/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="apple-touch-icon" href="images/gnome.jpg">
+  <script src="js/script.js"></script>
 </head>
 <body style="text-align: center;">
   <div id="username-modal" style="display: none;">
@@ -31,10 +32,9 @@
     <span id="username-tooltip" class="tooltiptext"></span>
   </div>
   <button id="reset-button">Reset Trees</button>
-  <button>Export Account</button>
+  <button onclick="exportfunc()">Export Account</button>
   <div id="countdown-overlay">
     <div class="countdown-text" id="countdown-text"></div>
   </div>
-  <script src="js/script.js"></script>
 </body>
 </html>
