--- a/browser_app/index.html
+++ b/browser_app/index.html
@@ -27,7 +27,7 @@
     </div>
   </div>
   <div id="blink-stats" class="tooltip">
-    All Time: <span id="blink-count">0</span> | High Score: <span id="high-score"></span>
+    All Time: <span id="blink-count">0</span> | High Score: <span id="high-score">Soon™</span>
     <span id="username-tooltip" class="tooltiptext"></span>
   </div>
   <button id="reset-button">Reset Trees</button>
