--- a/browser_app/secret/index.html
+++ b/browser_app/secret/index.html
@@ -687,7 +687,8 @@
             // Update summary
             totalBetsEl.textContent = totalBets;
             winRateEl.textContent = `${winRate}%`;
-            currentPnlEl.textContent = `$${cumulativePNL.toFixed(2)}`;
+            //display the pnl as a % of the porfolio increase
+            currentPnlEl.title = `Cumulative PNL: $${cumulativePNL.toFixed(2)}`;
             currentPnlEl.className = cumulativePNL >= 0 ? 'summary-value positive' : 'summary-value negative';
             
             // Update chart
