--- a/browser_app/secret/index.html
+++ b/browser_app/secret/index.html
@@ -687,8 +687,7 @@
             // Update summary
             totalBetsEl.textContent = totalBets;
             winRateEl.textContent = `${winRate}%`;
-            //display the pnl as a % of the porfolio increase
-            currentPnlEl.title = `Cumulative PNL: $${cumulativePNL.toFixed(2)}`;
+            currentPnlEl.textContent = `$${cumulativePNL.toFixed(2)}`;
             currentPnlEl.className = cumulativePNL >= 0 ? 'summary-value positive' : 'summary-value negative';
             
             // Update chart
