--- a/browser_app/secret/index.html
+++ b/browser_app/secret/index.html
@@ -458,7 +458,7 @@
     </div>
 
     <script>
-         localStorage.removeItem('mlbPredictions'); // Uncomment to reset all predictions
+        // localStorage.removeItem('mlbPredictions'); // Uncomment to reset all predictions
         
         // MLB Teams data
         const mlbTeams = [
