--- a/browser_app/secret/index.html
+++ b/browser_app/secret/index.html
@@ -710,7 +710,8 @@
                 labels.push(formatDate(prediction.date));
             });
             
-            const portfolioGrowth = totalBets > 0 ? (((totalUnits - 100) / 100) * 100).toFixed(2) + '%' : '0.00%';
+            // Calculate portfolio growth percentage 
+            const portfolioGrowth = totalBets > 0 ? (((totalUnits - 100) / 100) * 100).toFixed(2) : '0.00';
             
             // Update summary
             totalBetsEl.textContent = totalBets;
