--- a/browser_app/secret/index.html
+++ b/browser_app/secret/index.html
@@ -711,7 +711,7 @@
             });
             
             // Calculate portfolio growth percentage 
-            const portfolioGrowth = totalBets > 0 ? (((totalUnits - 100) / 100) * 100).toFixed(2) : '0.00';
+            const portfolioGrowth = totalBets > 0 ? (((totalUnits - 100)) * 100).toFixed(2) : '0.00';
             
             // Update summary
             totalBetsEl.textContent = totalBets;
