--- a/browser_app/secret/index.html
+++ b/browser_app/secret/index.html
@@ -727,7 +727,7 @@
             // Update summary
             totalBetsEl.textContent = totalBets;
             winRateEl.textContent = `${winRate}%`;
-            portfolioGrowthEl.textContent = `+${portfolioGrowth}%`;
+            portfolioGrowthEl.textContent = `${portfolioGrowth}%`;
             portfolioGrowthEl.className = portfolioGrowth >= 0 ? 'summary-value positive' : 'summary-value negative';
             
             // Update chart
