--- a/browser_app/secret/index.html
+++ b/browser_app/secret/index.html
@@ -728,6 +728,7 @@
             totalBetsEl.textContent = totalBets;
             winRateEl.textContent = `${winRate}%`;
             portfolioGrowthEl.textContent = `${portfolioGrowth}%`;
+            //include + or minus sign, only include 
             portfolioGrowthEl.className = portfolioGrowth >= 0 ? 'summary-value positive' : 'summary-value negative';
             
             // Update chart
