--- a/browser_app/secret/index.html
+++ b/browser_app/secret/index.html
@@ -728,7 +728,8 @@
             totalBetsEl.textContent = totalBets;
             winRateEl.textContent = `${winRate}%`;
             portfolioGrowthEl.textContent = `${portfolioGrowth}%`;
-            //include + or minus sign, only include 
+            //include + or minus sign, only include plus sign if positive, negative it will show minus sign automatically
+            
             portfolioGrowthEl.className = portfolioGrowth >= 0 ? 'summary-value positive' : 'summary-value negative';
             
             // Update chart
