--- a/browser_app/secret/index.html
+++ b/browser_app/secret/index.html
@@ -729,7 +729,7 @@
             winRateEl.textContent = `${winRate}%`;
             portfolioGrowthEl.textContent = `${portfolioGrowth}%`;
             //include + or minus sign, only include plus sign if positive, negative it will show minus sign automatically
-            
+            portfolioGrowthEl.textContent = portfolioGrowth >= 0 ? `+${portfolioGrowth}%` : `${portfolioGrowth}%`;
             portfolioGrowthEl.className = portfolioGrowth >= 0 ? 'summary-value positive' : 'summary-value negative';
             
             // Update chart
