--- a/browser_app/secret/dogcalc.html
+++ b/browser_app/secret/dogcalc.html
@@ -15,8 +15,8 @@
 
 <h2>Underdog ‑1.5 Value Tracker</h2>
 
-<label>Underdog ML: <input id="ml" type="number" placeholder="+160"></label>
-<label>Favorite ML: <input id="fav" type="number" placeholder="-190"></label>
+<label>Underdog ML (dec): <input id="ml" type="number" step="0.01" placeholder="2.60"></label>
+<label>Favorite ML (dec): <input id="fav" type="number" step="0.01" placeholder="1.53"></label>
 <label>Home/Away:
   <select id="loc">
     <option value="home">Home</option>
@@ -35,18 +35,18 @@
 </table>
 
 <script>
-function implied(ml){return Math.abs(ml)/(Math.abs(ml)+100)}
+function implied(d){return 1/d}
 function addRow(){
-  const ml=parseInt(document.getElementById('ml').value);
-  const fav=parseInt(document.getElementById('fav').value);
+  const ml=parseFloat(document.getElementById('ml').value);
+  const fav=parseFloat(document.getElementById('fav').value);
   const loc=document.getElementById('loc').value;
   const gap=implied(fav)-implied(ml);
-  const actual=prompt("Enter actual underdog ‑1.5 line (e.g., +220):");
+  const actual=prompt("Enter actual underdog ‑1.5 decimal odds:");
   if(!actual) return;
-  const actNum=parseInt(actual);
-  const expected=150+350*gap+(loc==='home'?-10:10);
+  const actNum=parseFloat(actual);
+  const expected=3.5+6.5*gap+(loc==='home'?-.1:.1);
   const val=actNum-expected;
-  const row=[gap.toFixed(2),loc,actNum,expected.toFixed(0),val.toFixed(0)];
+  const row=[gap.toFixed(3),loc,actNum.toFixed(2),expected.toFixed(2),val.toFixed(2)];
   const data=JSON.parse(localStorage.getItem('d')||'[]');
   data.unshift(row);
   localStorage.setItem('d',JSON.stringify(data));
@@ -54,7 +54,7 @@ function addRow(){
 }
 function render(){
   const data=JSON.parse(localStorage.getItem('d')||'[]');
-  document.getElementById('bod').innerHTML=data.map(r=>`<tr><td>${r[0]}</td><td>${r[1]}</td><td>${r[2]>0?'+':''}${r[2]}</td><td>${r[3]>0?'+':''}${r[3]}</td><td class="${r[4]>0?'pos':'neg'}">${r[4]>0?'+':''}${r[4]}</td></tr>`).join('');
+  document.getElementById('bod').innerHTML=data.map(r=>`<tr><td>${r[0]}</td><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td><td class="${r[4]>0?'pos':'neg'}">${r[4]>0?'+':''}${r[4]}</td></tr>`).join('');
 }
 render();
 </script>
