--- a/browser_app/secret/dogcalc.html
+++ b/browser_app/secret/dogcalc.html
@@ -31,7 +31,7 @@
       <th>ML Gap</th><th>H/A</th><th>Actual ‑1.5</th><th>Expected ‑1.5</th><th>Value</th>
     </tr>
   </thead>
-  <tbody id="bod"></tbody>
+  <tbody></tbody>
 </table>
 
 <script>
@@ -44,19 +44,18 @@ function addRow(){
   const actual=prompt("Enter actual underdog ‑1.5 line (e.g., +220):");
   if(!actual) return;
   const actNum=parseInt(actual);
+  // crude regression: expected = 150 + 350*gap + (loc==='home'?-10:10)
   const expected=150+350*gap+(loc==='home'?-10:10);
   const val=actNum-expected;
-  const row=[gap.toFixed(2),loc,actNum,expected.toFixed(0),val.toFixed(0)];
-  const data=JSON.parse(localStorage.getItem('d')||'[]');
-  data.unshift(row);
-  localStorage.setItem('d',JSON.stringify(data));
-  render();
+  const row=document.createElement('tr');
+  row.innerHTML=`
+    <td>${gap.toFixed(2)}</td>
+    <td>${loc}</td>
+    <td>${actNum>0?'+':''}${actNum}</td>
+    <td>${expected>0?'+':''}${expected.toFixed(0)}</td>
+    <td class="${val>0?'pos':'neg'}">${val>0?'+':''}${val.toFixed(0)}</td>`;
+  document.querySelector('#tbl tbody').prepend(row);
 }
-function render(){
-  const data=JSON.parse(localStorage.getItem('d')||'[]');
-  document.getElementById('bod').innerHTML=data.map(r=>`<tr><td>${r[0]}</td><td>${r[1]}</td><td>${r[2]>0?'+':''}${r[2]}</td><td>${r[3]>0?'+':''}${r[3]}</td><td class="${r[4]>0?'pos':'neg'}">${r[4]>0?'+':''}${r[4]}</td></tr>`).join('');
-}
-render();
 </script>
 
 </body>
