--- a/browser_app/secret/dogcalc.html
+++ b/browser_app/secret/dogcalc.html
@@ -3,7 +3,7 @@
 <head>
   <title>-1.5 Value Finder</title>
   <style>
-    *{box-sizing:border-box}body{font-family:system-ui,-apple-system,sans-serif;margin:0;background:#0a0a0a;color:#e0e0e0;min-height:100vh}input,button,select{padding:8px;margin:4px;border-radius:6px;border:1px solid #333;background:#1a1a1a;color:#e0e0e0}button{background:#2563eb;cursor:pointer;transition:all 0.2s}button:hover{background:#1d4ed8}table{width:100%;border-collapse:collapse;margin-top:16px}th,td{padding:8px;text-align:center;border-bottom:1px solid #333}th{background:#1a1a1a;font-weight:600}tr:hover{background:#1a1a1a}.pos{color:#10b981}.neg{color:#ef4444}.avg-row{font-weight:600;background:#1f2937}.container{max-width:1200px;margin:0 auto;padding:20px}h2{color:#e0e0e0;margin-bottom:20px}
+    *{box-sizing:border-box}body{font-family:system-ui,-apple-system,sans-serif;margin:0;background:#0a0a0a;color:#e0e0e0;min-height:100vh}input,button,select{padding:8px;margin:4px;border-radius:6px;border:1px solid #333;background:#1a1a1a;color:#e0e0e0}button{background:#2563eb;cursor:pointer;transition:all 0.2s}button:hover{background:#1d4ed8}table{width:100%;border-collapse:collapse;margin-top:16px}th,td{padding:8px;text-align:center;border-bottom:1px solid #333}th{background:#1a1a1a;font-weight:600;position:sticky;top:0;z-index:10}tr:hover{background:#1a1a1a}.pos{color:#10b981}.neg{color:#ef4444}.avg-row{font-weight:600;background:#1f2937}.container{max-width:1200px;margin:0 auto;padding:20px}h2{color:#e0e0e0;margin-bottom:20px}.table-container{max-height:70vh;overflow-y:auto;border:1px solid #333;border-radius:8px}
   </style>
 </head>
 <body>
@@ -18,6 +18,7 @@
     </select>
   </label>
   <button onclick="addRow()">Add Game</button>
+  <div class="table-container">
   <table id="tbl">
     <thead>
       <tr>
@@ -26,6 +27,7 @@
     </thead>
     <tbody></tbody>
   </table>
+  </div>
 </div>
 <script>
   let gameCounter = 0;
@@ -106,7 +108,7 @@
   exampleData.forEach(data => {
     const p_um = (1 / data.um) / (1 / data.um + 1 / data.fm);
     const p_url = 1 / data.url;
-    games.push({ um: data.um, fm: data.fm, status: data.status, url: data.url, p_um, p_url, diff_from_avg: 0, ev: 0 });
+    games.unshift({ um: data.um, fm: data.fm, status: data.status, url: data.url, p_um, p_url, diff_from_avg: 0, ev: 0 });
     gameCounter++;
   });
   calculateMetrics();
