--- a/browser_app/secret/dogcalc.html
+++ b/browser_app/secret/dogcalc.html
@@ -44,6 +44,28 @@
     { um: 2.06, fm: 1.73, status: 'away', url: 2.56 },
     { um: 2.44, fm: 1.53, status: 'home', url: 3.20 }
   ];
+  function saveGames() {
+    localStorage.setItem('valueFinderGames', JSON.stringify(games));
+  }
+  
+  function loadGames() {
+    const saved = localStorage.getItem('valueFinderGames');
+    if (saved) {
+      const parsed = JSON.parse(saved);
+      games.length = 0;
+      parsed.forEach(game => games.push(game));
+      gameCounter = games.length;
+    } else {
+      exampleData.forEach(data => {
+        const p_um = (1 / data.um) / (1 / data.um + 1 / data.fm);
+        const p_url = 1 / data.url;
+        games.unshift({ um: data.um, fm: data.fm, status: data.status, url: data.url, p_um, p_url, diff_from_avg: 0, ev: 0 });
+        gameCounter++;
+      });
+    }
+    calculateMetrics();
+  }
+  
   function calculateMetrics() {
     const homeGames = games.filter(g => g.status === 'home');
     const awayGames = games.filter(g => g.status === 'away');
@@ -58,6 +80,7 @@
       const fair_url = fair_p_url > 0 ? 1 / fair_p_url : Infinity;
       game.ev = game.url - fair_url;
     });
+    saveGames();
     updateTable();
   }
   function updateTable() {
@@ -101,17 +124,12 @@
     games.unshift({ um, fm, status, url, p_um, p_url, diff_from_avg: 0, ev: 0 });
     gameCounter++;
     calculateMetrics();
+    saveGames();
     document.getElementById('ml').value = '';
     document.getElementById('fav').value = '';
     document.getElementById('loc').value = 'home';
   }
-  exampleData.forEach(data => {
-    const p_um = (1 / data.um) / (1 / data.um + 1 / data.fm);
-    const p_url = 1 / data.url;
-    games.unshift({ um: data.um, fm: data.fm, status: data.status, url: data.url, p_um, p_url, diff_from_avg: 0, ev: 0 });
-    gameCounter++;
-  });
-  calculateMetrics();
+  loadGames();
 </script>
 </body>
 </html>
