--- a/file.html
+++ b/file.html
@@ -19,8 +19,8 @@
 <button id="voteBtn">TREASURY VOTE – MOVE EXHIBIT</button>
 
 <script type="module">
-import * as THREE from 'https://cdn.skypack.dev/three@0.158.0';
-import { OrbitControls } from 'https://cdn.skypack.dev/three@0.158.0/examples/jsm/controls/OrbitControls.js';
+import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.module.js';
+import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.158.0/examples/jsm/controls/OrbitControls.js';
 
 /* ---- basic setup ---- */
 const scene = new THREE.Scene();
